[gd_scene load_steps=8 format=3 uid="uid://cqv4sbsaj5pld"]

[ext_resource type="Script" uid="uid://cbq8igyhcwgnm" path="res://main_menu.gd" id="1_n45e2"]
[ext_resource type="FontFile" uid="uid://dvtbwtea6wst6" path="res://Assets/font/Round9x13.ttf" id="2_cp0ys"]
[ext_resource type="Texture2D" uid="uid://do4xas2bfl76m" path="res://Assets/start.png" id="2_opfnp"]
[ext_resource type="Texture2D" uid="uid://ceb3myoxsatkq" path="res://Assets/crown.png" id="3_cp0ys"]
[ext_resource type="Texture2D" uid="uid://bhwx858qr4b6f" path="res://Assets/info.png" id="4_yhxw7"]
[ext_resource type="Texture2D" uid="uid://cm215fbq64hnn" path="res://Assets/question.png" id="5_trj04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16hvj"]
bg_color = Color(0.358992, 0.484376, 0.374887, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_n45e2")
metadata/_edit_horizontal_guides_ = [350.0, 267.0, -54.0]
metadata/_edit_vertical_guides_ = [596.0, 223.0, 932.0, 575.0]

[node name="Panel" type="Panel" parent="."]
offset_right = 1918.0
offset_bottom = 1086.0
theme_override_styles/panel = SubResource("StyleBoxFlat_16hvj")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 701.0
offset_top = 463.0
offset_right = 1177.0
offset_bottom = 642.0
theme_override_fonts/font = ExtResource("2_cp0ys")
theme_override_font_sizes/font_size = 64
text = "DARWIN'S GAME"

[node name="Crown_BTN" type="Button" parent="."]
offset_left = 159.0
offset_top = 817.0
offset_right = 306.0
offset_bottom = 900.0

[node name="Info_BTN" type="Button" parent="."]
offset_left = 1654.0
offset_top = 267.0
offset_right = 1754.0
offset_bottom = 348.0

[node name="Question_BTN" type="Button" parent="."]
offset_left = 1694.0
offset_top = 842.0
offset_right = 1839.0
offset_bottom = 927.0

[node name="Start_BTN" type="Button" parent="."]
offset_left = 849.0
offset_top = 894.0
offset_right = 1011.0
offset_bottom = 978.0

[node name="s_btn" type="Sprite2D" parent="."]
position = Vector2(905, 913)
scale = Vector2(0.316081, 0.252441)
texture = ExtResource("2_opfnp")

[node name="i_btn" type="Sprite2D" parent="."]
position = Vector2(1723, 281)
scale = Vector2(0.22168, 0.25415)
texture = ExtResource("4_yhxw7")

[node name="C_btn" type="Sprite2D" parent="."]
position = Vector2(208, 873)
scale = Vector2(0.293132, 0.253296)
texture = ExtResource("3_cp0ys")

[node name="q_btn" type="Sprite2D" parent="."]
position = Vector2(1797, 895)
scale = Vector2(0.326172, 0.250244)
texture = ExtResource("5_trj04")

[connection signal="pressed" from="Crown_BTN" to="." method="_on_crown_btn_pressed"]
[connection signal="pressed" from="Info_BTN" to="." method="_on_info_btn_pressed"]
[connection signal="pressed" from="Question_BTN" to="." method="_on_question_btn_pressed"]
[connection signal="pressed" from="Start_BTN" to="." method="_on_start_btn_pressed"]
